Subindo parte do desenvolvimento da arvore